--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
     
         <footer class="mastfoot mt-auto">
             <div class="inner">
-            <p>Assignment by &nbsp;<a href="https://bit.ly/paliwalsamarth/">Samarth Paliwal</a></p>
+            <p>Assignment by &nbsp;<a href="https://bit.ly/paliwalsamarth">Samarth Paliwal</a></p>
             </div>
         </footer>
 
